@@ -3,6 +3,7 @@
 ###########################################
 
 Olivier PLATHEY - For providing FPDF
+Sven Nierlein - For providing mod_gearman
 
 Hendrik Baecker - Testing, debugging and english Translation
 Olaf Reiss - Testing
