@@ -42,6 +42,7 @@ my %conf = (
     DRY_RUN           => 0,
     FORCE             => 0,
     RRD_BACKUP        => 1,
+    RRD_STORAGE_TYPE  => "SINGLE",
     TMP_DIR           => '/tmp/rrd_convert',
     RRD_DAEMON_OPTS   => "",
     XML_MAX_AGE       => 3600,
@@ -89,15 +90,17 @@ my %original_ds_list;
 my $max_age = time() - $conf{XML_MAX_AGE};
 
 my %stats = (
-	'rrd_in'  => 0,
-	'rrd_out' => 0,
-	'old_xml' => 0,
-	'runtime' => 0,
+	'rrd_in'          => 0,
+	'rrd_out'         => 0,
+	'old_xml'         => 0,
+	'xml_without_rrd' => 0,
+	'runtime'         => 0,
 );
 
 main();
 
 sub main{
+	check_storage_type();
 	find(\&wanted_xml_files, $conf{RRDPATH});
 	summary();
 	if($opt_l){  # List commands and exit
@@ -118,6 +121,7 @@ sub main{
 		exit;
 	}
 	check_custom_template();
+	write_custom_template();
 	my $t0 = [gettimeofday];
 	my $i = 0;
 	foreach my $xmlfile ( @worklist ) {
@@ -125,7 +129,8 @@ sub main{
 		undef %ds_list;
 		undef %original_ds_list;
 		my($host,$service) = parse_xml_filename($xmlfile);
-		my $rrdfile = sprintf("%s/%s/%s.rrd",$conf{RRDPATH},$host,$service);
+		my ($rrdfile) = $xmlfile =~ /^(.*)\.xml$/;
+        $rrdfile .= ".rrd";
 		if(-r $rrdfile){
 			create_dir($conf{TMP_DIR});
 			my $dumpfile = sprintf("%s/%s-%s.dump",$conf{TMP_DIR},$host,$service);
@@ -180,28 +185,41 @@ sub check_ds_list{
 }
 
 sub wanted_xml_files{
-        if(m/.xml/){
-                #printf("File: %s\n",$File::Find::name);
-                my $xmlfile = $File::Find::name;
+	if(m/.xml/){
+       	#printf("File: %s\n",$File::Find::name);
+        my $xmlfile = $File::Find::name;
+        my ($rrdfile) = $xmlfile =~ /^(.*)\.xml$/;
+		$rrdfile .= ".rrd";
 		my $mtime = (stat($xmlfile))[9];
 		if ( $mtime < $max_age ){
 			push(@oldfiles, $xmlfile);
 			$stats{old_xml}++;
 			return;
-		} 
-                open(XML, $xmlfile);
-                while (<XML>) {
-                        if(/CHECKCOMMAND>(.*)</){
-                                my ($t) = split("!",$1);
-                                push(@commands,$t);
-                                if(( defined $opt_c) and ($t =~ /^$opt_c$/)){
-                                        #print "Found: ".$t." in ".$xmlfile."\n";
-                                        push(@worklist,$xmlfile);
-                                }
-                        }
-                }
-                close(XML);
+		}
+        open(XML, $xmlfile);
+       	while (<XML>) {
+            if(/CHECKCOMMAND>(.*)</){
+                my ($t) = split("!",$1);
+                push(@commands,$t);
+                if(( defined $opt_c) and ($t =~ /^$opt_c$/)){
+					if( -e $rrdfile ){
+                  		#print "Found: ".$t." in ".$xmlfile."\n";
+                    	push(@worklist,$xmlfile);
+					}else{
+						$stats{xml_without_rrd}++;
+					}
+                }elsif(( defined $opt_c) and ($opt_c eq 'ALL')){
+					if( -e $rrdfile ){
+						# Keyword 'ALL' retunrs all XML Files
+                    	push(@worklist,$xmlfile);
+					}else{
+						$stats{xml_without_rrd}++;
+					}
+				}
+            }
         }
+        close(XML);
+	}
 }
 
 sub parse_xml_filename{
@@ -218,6 +236,7 @@ sub summary{
 	printf "%-40s %s\n"  ,"Search pattern",$opt_c if( defined ($opt_c) );
 	printf "%-40s %s\n"  ,"XML Files analyzed",$#commands+1;
 	printf "%-40s %s\n"  ,"XML Files found",$#worklist+1;
+	printf "%-40s %s\n"  ,"XML Files without RRD",$stats{'xml_without_rrd'};
 	printf "%-40s %s\n"  ,"Old XML Files ignored",$#oldfiles+1;
 	printf "%-40s %s\n"  ,"Number of unique check_commands",$#uniqed+1;
 	if($conf{DRY_RUN} == 1){
@@ -453,10 +472,26 @@ sub parse_config {
     }
 }
 
+#
+# Change RRD_STORAGE_TYPE to MULTIPLE
+#
+sub change_config {
+	my $cfg_file = $conf{'CFG_DIR'}."/process_perfdata.cfg";
+	my $error = system("sed -i -e ".'s/\s*RRD_STORAGE_TYPE\s*=\s*SINGLE/RRD_STORAGE_TYPE=MULTIPLE/i'." $cfg_file");	
+}
+
+sub check_storage_type{
+	if($conf{'RRD_STORAGE_TYPE'} eq "MULTIPLE"){
+		print "RRD_STORAGE_TYPE is already set to ".$conf{'RRD_STORAGE_TYPE'}."\n"; 
+	}
+}
 sub check_custom_template {
  	my $command = $opt_c;
 	if ( $conf{DRY_RUN} == 1 ){
 		print "No config check while DRY_RUN = 1\n";
+		return;
+	}
+	if ( $command eq "ALL" ){
 		return;
 	}
 	my $config_file = $conf{'CFG_DIR'}."/check_commands/".$command.".cfg";
@@ -464,17 +499,29 @@ sub check_custom_template {
 	if ( -e $config_file && $conf{'FORCE'} == 0 ) {
 		print "\nConfig for command $command does already exist ($config_file)\n\n";
 		exit 0;
-	}else{
-		open(CFG, ">", $config_file);
-		print CFG "# Generated by rrd_convert.pl @PKG_VERSION@\n";
-		print CFG "RRD_STORAGE_TYPE = MULTIPLE\n";
-		close(CFG);
-		if ( -s $config_file ) {
-			print "\nConfig for command $command created ($config_file)\n";
-		}
 	}
 }
 
+sub write_custom_template {
+ 	my $command = $opt_c;
+	if ( $conf{DRY_RUN} == 1 ){
+		print "No config check while DRY_RUN = 1\n";
+		return;
+	}
+	if ( $opt_c eq "ALL"){
+		change_config();
+		return;
+	}
+	my $config_file = $conf{'CFG_DIR'}."/check_commands/".$command.".cfg";
+	my $storage_type = "MULTIPLE";
+	open(CFG, ">", $config_file);
+	print CFG "# Generated by rrd_convert.pl @PKG_VERSION@\n";
+	print CFG "RRD_STORAGE_TYPE = MULTIPLE\n";
+	close(CFG);
+	if ( -s $config_file ) {
+		print "\nConfig for command $command created ($config_file)\n";
+	}
+}
 sub read_choice{
         my $question = shift;
         print $question.":";
