@@ -1,4 +1,6 @@
 **pnp-0.6.12 ??/??/2011**
+  * Feature: mod_geamrman support added.
+  * Feature: rrd_convert.pl is now able to convert all RRDs from RRD_STORAGE_TYPE=SINGLE to RRD_STORAGE_TYPE=MULTIPLE
 
 **pnp-0.6.11 01/15/2011**
   * Bugfix: urldecoding fixed 
